# query-bridge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
demo/: README.md  chinook.db  chinook.sql  chinook_postgres.sql
docs/: index.md  mkdocs.yml
docs/api-reference/: connectors.md  engine.md  llm.md
docs/architecture/: agentic-loop.md  overview.md  safety.md
docs/getting-started/: docker.md  installation.md  quickstart.md
docs/plugins/: api.md  writing-plugins.md
examples/: README.md  custom_plugin.py  fastapi_integration.py  multi_llm.py  quickstart.py
playground/: Dockerfile  package.json
playground/src/: index.html
src/querybridge/: __init__.py
src/querybridge/agent/: __init__.py  builtin_tools.py  context.py  loop.py  tools.py
src/querybridge/classifier/: __init__.py  entity_extractor.py  patterns.py  question_classifier.py
src/querybridge/connectors/: __init__.py  base.py  generic_sqlalchemy.py  postgresql.py  snowflake.py  sqlite.py
src/querybridge/core/: __init__.py  config.py  engine.py  models.py
src/querybridge/discovery/: __init__.py  brief.py  engine.py  fuzzy_match.py
src/querybridge/export/: __init__.py  csv_export.py  excel_export.py  json_export.py
src/querybridge/llm/: anthropic_provider.py  base.py  litellm_provider.py  models.py  openai_provider.py
src/querybridge/memory/: conversation.py  exploration.py  persistent.py  rag_sync.py  store.py
src/querybridge/plugins/: __init__.py  base.py  registry.py
src/querybridge/plugins/builtin/: generic.py  manufacturing.py
src/querybridge/prompts/: __init__.py  few_shot.py  system.py
src/querybridge/safety/: __init__.py  guard.py  sanitizer.py  validator.py
src/querybridge/schema/: __init__.py  cache.py  discoverer.py  relationship_detector.py
src/querybridge/schema/introspection/: __init__.py  generic.py  postgresql.py
src/querybridge/server/: __init__.py  api.py  cli.py  mcp.py  router.py  websocket.py
src/querybridge/strategy/: __init__.py  column_hierarchy.py  tracker.py
tests/: seed_exploration.py  test_classifier.py  test_core.py  test_e2e_regression.py  test_export.py  test_guard.py  test_memory.py  test_persistent_memory.py  test_plugins.py  test_validator.py
