[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querybridge"
version = "0.1.0"
description = "Connect any database. Ask questions in plain English. Get accurate SQL-backed answers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["nlp", "sql", "natural-language", "database", "ai", "llm", "text-to-sql", "nl2sql", "openai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
authors = [
    {name = "QueryBridge Contributors"},
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://github.com/ajayadaha1/query-bridge"
Documentation = "https://github.com/ajayadaha1/query-bridge/tree/main/docs"
Repository = "https://github.com/ajayadaha1/query-bridge"
Issues = "https://github.com/ajayadaha1/query-bridge/issues"
Changelog = "https://github.com/ajayadaha1/query-bridge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
postgresql = ["asyncpg>=0.29.0"]
mysql = ["aiomysql>=0.2.0"]
sqlite = ["aiosqlite>=0.20.0"]
snowflake = ["snowflake-connector-python>=3.0.0", "snowflake-sqlalchemy>=1.5.0", "cryptography>=42.0.0"]
mssql = ["aioodbc>=0.5.0"]
bigquery = ["google-cloud-bigquery>=3.0.0"]
litellm = ["litellm>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
server = ["fastapi>=0.109.0", "uvicorn[standard]>=0.25.0", "websockets>=12.0"]
export = ["pandas>=2.0.0", "openpyxl>=3.1.0"]
all = [
    "querybridge[postgresql,mysql,sqlite,server,export,anthropic,litellm]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
]

[project.scripts]
querybridge = "querybridge.server.cli:main"

[project.entry-points."querybridge.plugins"]

[tool.hatch.build.targets.wheel]
packages = ["src/querybridge"]

[tool.hatch.build.targets.sdist]
include = ["src/querybridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "integration: marks tests requiring a live database",
    "slow: marks slow tests",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "querybridge.server.*",
    "querybridge.agent.*",
]
ignore_errors = true

[tool.coverage.run]
source = ["querybridge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
